Sat Jun  5 19:09:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/including.idl:
          Fixed identifier

Sat Jun  5 17:55:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_interface/ami4ccm_sendc_ex_idl.cpp:
          Const change

        * docs/tutorials/Quoter/RTCORBA/Common.idl:
        * docs/tutorials/Quoter/RTCORBA/StockNameConsumer_i.h:
        * docs/tutorials/Quoter/RTCORBA/StockNameConsumer_i.cpp:
          Fixed identifiers which where only different by case

Fri Jun  4 14:05:00 UTC 2010  Simon Massey  <simon dot massey at prismtech dot com>

        * TAO_IDL/util/utl_scope.cpp:

          The previous "Thu Jun 3 20:34:13 UTC 2010 Jeff Parsons <j.parsons@vanderbilt.edu>"
          saved a modified older version over the current head. I have
          reverted this change and then re-applied the actual modifications
          done by that commit but to the original head version.

Fri Jun  4 08:37:55 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/Messaging/Messaging_Loader.cpp:
          Fixed a problem related to bug 3755 in Messaging library.
          Despite corresponding test in 3755_Ext worked there was a memory
          leak during execution of orb initializer code. The leak was
          happening because the same loader was executed twice and
          consequently the loader was registering the same orb initializer
          twice. Now this is fixed.

Thu Jun  3 20:34:13 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/util/utl_scope.cpp:

          Added a check for the lookup result from iteration over
          the scope decls being 0 before iterating over the scope
          'local types', which may provide a little performance
          gain. Also added the top level result of the lookup
          to the 'referenced' list of the lookup scope, necessary
          for detecting name clashes.
