@@ -13,7 +13,6 @@
  */
 //=============================================================================
 
-
 #include "ami_test_i.h"
 #include "tao/debug.h"
 
@@ -72,7 +71,6 @@ AMI_Test_i::shutdown (void)
   this->orb_->shutdown (0);
 }
 
-
 CORBA::Long
 AMI_Test_i::yadda (void)
 {
@@ -80,7 +78,6 @@ AMI_Test_i::yadda (void)
               "%N:%l:(%P:%t):AMI_Test_i::(get_)yadda\n"));
   return yadda_;
 }
-
 
 void
 AMI_Test_i::yadda (CORBA::Long yadda)
